--- a/website/app/application/core/projects/project/reviews/myModalContent.html
+++ b/website/app/application/core/projects/project/reviews/myModalContent.html
@@ -1,6 +1,6 @@
 <div>
     <div class="modal-header">
-        <h3 class="modal-title">Attachments {{modal.type}}</h3>
+        <h3 class="modal-title">Attachments</h3>
     </div>
     <div class="modal-body">
         <div class="row">
