--- a/website/app/application/core/projects/project/processes/list.html
+++ b/website/app/application/core/projects/project/processes/list.html
@@ -8,7 +8,7 @@
             </div>
             <ul  class="list-group">
                 <li ui-sref="projects.project.processes.list.edit({'process_id': process.id})"
-                    ng-class="{active: current.id === process.id}"
+                    ng-class="{'process': current.id === process.id}"
                     class="list-group-item pointer"
                     ng-repeat="process in project.processes"
                         ng-click="viewProcess(process)">
