--- a/website/app/index.html
+++ b/website/app/index.html
@@ -329,6 +329,11 @@
 <script src="application/core/components/properties/properties.js"></script>
 <script src="application/services/project-task-bar-state-service.js"></script>
 <script src="application/core/projects/project/processes/transformation-controller.js"></script>
+<script src="application/core/projects/project/processes/sidebar-samples-directive.js"></script>
+<script src="application/core/projects/project/processes/sidebar-process-details-directive.js"></script>
+<script src="application/core/projects/project/processes/sidebar-setup-directive.js"></script>
+<script src="application/core/projects/project/processes/sidebar-transformed-samples-directive.js"></script>
+<script src="application/core/projects/project/processes/sidebar-files-directive.js"></script>
 <script src="application/core/components/properties/partials/display-measurement-directive.js"></script>
 </body>
 </html>
