--- a/website/app/application/core/projects/project/processes/create.html
+++ b/website/app/application/core/projects/project/processes/create.html
@@ -9,151 +9,29 @@
                         <h4 class="text-center process">{{template.name}}</h4>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-xs-12">
-                        <label>How would you describe your process?</label>
-
-                        <div class="row">
-                            <div class="col-xs-12">
-                                {{template.what}}
-
-                            </div>
-                        </div>
-                        <label>Why did you do this?</label>
-
-                        <div class="row">
-                            <div class="col-xs-12">
-                                {{template.why}}
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <sidebar-process-details></sidebar-process-details>
+                <hr class="divider"/>
+                <sidebar-setup></sidebar-setup>
                 <hr class="divider"/>
 
-                <div ng-if="template._type !== 'as_received'" class="row">
-                    <div class="col-xs-12">
-                        <b>Set Up</b>
-                        <ul>
-                            <li ng-repeat="setting in template.setup.settings[0].properties"
-                                ng-if="setting.property.value">
-                                <i>{{setting.property.name}}</i> ::
-                                {{setting.property.value}} {{setting.property.unit}}
-
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div ng-if="template._type !== 'as_received'" class="row">
-                    <hr class="divider"/>
-
-                    <div class="col-xs-8">
-                        <b>Samples</b>
-
-                        <div class="row" ng-repeat="sample in template.input_samples">
-                            <i class="fa fa-fw fa-paperclip fa-lg" style="color: #919191"></i>
-                            <img src="assets/img/splash/sample_icon.png"
-                                 style="height: 40px;padding-bottom: 10px;">
-                            <a ng-click="openDetails(sample)" class="link pointer"
-                               style="padding-left: 15px;">{{sample.name}}</a>
-
-                            <div class="row">
-                                <div class="col-xs-offset-2">
-                                    <b>Measurements:</b>
-                                    <ul class="list-unstyled">
-                                        <li ng-repeat="property in sample.new_properties">
-                                            {{property.name}}
-                                            <i ng-click="removeAttachment(property, 'new_properties', sample.id)"
-                                               class="fa fa-fw fa-close pull-right pointer"></i>
-                                            <div ng-repeat="measure in property.measures">
-                                                <div>
-                                                    <display-measurement measure="measure"></display-measurement>
-                                                </div>
-                                            </div>
-                                        </li>
-                                    </ul>
-                                    <ul class="list-unstyled">
-                                        <li ng-repeat="property in sample.properties">
-                                            <div ng-if="property.measures">{{property.name}}
-                                            <i ng-click="removeAttachment(property, 'properties', sample.id)"
-                                               class="fa fa-fw fa-close pull-right pointer"></i>
-                                            </div>
-                                            <div ng-repeat="measure in property.measures">
-                                                <div ng-switch="measure._type">
-                                                    <div ng-switch-when="number">
-                                                        <span style="padding-left: 30px;"> {{measure.value}} {{measure.unit}}</span>
-                                                    </div>
-                                                    <div ng-switch-when="fraction">
-                                                        <span style="padding-left: 30px;">{{measure.value}} {{measure.unit}}</span>
-                                                    </div>
-                                                    <div ng-switch-when="string">
-                                                        <span style="padding-left: 30px;"> {{measure.value}}</span>
-                                                    </div>
-                                                    <div ng-switch-when="pair">
-                                                        <span style="padding-left: 30px;">
-                                                            {{measure.attribute1.value}} {{measure.attribute1.unit}} ::
-                                                            {{measure.attribute2.value}} {{measure.attribute2.unit}}
-                                                        </span>
-                                                    </div>
-                                                    <div ng-switch-when="histogram">
-                                                        <a href="" popover="Graph displayed here...."
-                                                           popover-title="Particle size distribution">{{measure.name}}
-                                                            <i
-                                                                    class="fa fa-bar-chart"></i>
-                                                        </a>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </li>
-                                    </ul>
-                                    <b>Files:</b>
-                                    <ul>
-                                        <li ng-repeat="file in sample.files">
-                                            <i class="fa fa-fw fa-paperclip fa-lg" style="color: #919191"></i>
-                                            <img src="assets/img/splash/file_icon.png"
-                                                 style="height: 30px;padding-bottom: 10px;"> {{file.name}}
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                            <hr/>
-                        </div>
-                    </div>
-                </div>
                 <div class="row" ng-if="template._type === 'as_received'">
                     <b>New Sample</b>
-
                     <div style="padding-left: 20px;" class="col-xs-8">
 
                         <div ng-if="bk.newSample.name">Name: {{bk.newSample.name}}</div>
                         <div ng-if="bk.newSample.description">Description: {{bk.newSample.description}}</div>
                     </div>
                 </div>
-                <hr class="divider"/>
-                <div class="row">
-                    <div class="col-xs-8">
-                        <b>Files</b>
 
-                        <div class="row" ng-repeat="attachment in template.input_files">
-                            <div ng-if="attachment.type === 'datafile'">
-                                <i class="fa fa-fw fa-paperclip fa-lg" style="color: #919191"></i>
-                                <img src="assets/img/splash/file_icon.png"
-                                     style="height: 40px;padding-bottom: 10px;">
-                                <a ng-click="openDetails(attachment)" class="link pointer"
-                                   style="padding-left: 15px;">{{attachment.name}}</a>
-
-                            </div>
-                        </div>
-                        <div class="row" ng-repeat="attachment in template.output_files">
-                            <div ng-if="attachment.type === 'datafile'">
-                                <i class="fa fa-fw fa-paperclip fa-lg" style="color: #919191"></i>
-                                <img src="assets/img/splash/file_icon.png"
-                                     style="height: 40px;padding-bottom: 10px;">
-                                <a ng-click="openDetails(attachment)" class="link pointer"
-                                   style="padding-left: 15px;">{{attachment.name}}</a>
-                            </div>
-                        </div>
-                    </div>
+                <div ng-if="!template.does_transform" class="row">
+                    <sidebar-samples></sidebar-samples>
                 </div>
+
+                <div class="row" ng-if="template.does_transform">
+                    <sidebar-transformed-samples></sidebar-transformed-samples>
+                </div>
+                <hr class="divider"/>
+                 <sidebar-files></sidebar-files>
                 <hr class="divider"/>
             </div>
         </div>
@@ -262,7 +140,7 @@
                                        ng-click="removeAttachment(attachment, 'input_files', '')"
                                        class="fa fa-fw fa-close pull-right pointer"></i>
 
-                                    <span ng-if="" style="padding-left: 20px">
+                                    <span  ng-show="template.does_transform === false" style="padding-left: 20px">
                                       <i class="fa fa-link fa-fw sample"></i>
                                         <span><a class="sample"
                                                  ng-click="link = !link">Link Sample</a>
@@ -298,7 +176,8 @@
                                     <i style="padding-left: 20px;"
                                        ng-click="removeAttachment(attachment, 'output_files', '')"
                                        class="fa fa-fw fa-close pull-right pointer"></i>
-                                    <span style="padding-left: 20px">
+
+                                    <span ng-show="template.does_transform === false" style="padding-left: 20px">
                                       <i class="fa fa-link fa-fw sample"></i>
                                         <span><a class="sample"
                                                  ng-click="link = !link">Link Sample</a>
