--- a/website/app/application/core/projects/project/processes/transformation.html
+++ b/website/app/application/core/projects/project/processes/transformation.html
@@ -6,14 +6,12 @@
 
     <div class="modal-body">
         <div class="row">
-            Below are the actions you will have to perform on your sample. Each action is explained below <br>
+            Below are the actions you will have to perform on your sample properties. Each action is explained below <br>
 
-            COPY: <br>
+           <b>Is Transformed: </b>  <br>
 
-            SHARE: <br>
-
-            UNKNOWN: <br>
-        </div>
+            <b>Is Not Transformed:</b> <br>
+        </div> <br>
         <div class="row">
             <div class="sample headings">Properties</div>
             <ul>
@@ -22,12 +20,12 @@
                     <div class="row">
                         <div class="col-xs-offset-1">
                             <ul class="list-inline list-unstyled">
-                                <li><input type="radio"  ng-model="property.action" value="copy"><span style="padding-left:30px;">Copy</span>
+                                <li><input type="radio"  ng-model="property.action" value="is_transformed"><span style="padding-left:30px;">Is Transformed</span>
                                 </li>
-                                <li><input type="radio" ng-model="property.action" value="share"><span
-                                        style="padding-left:30px;">Share</span></li>
-                                <li><input type="radio" ng-model="property.action" value="unknown"><span
-                                        style="padding-left:30px;">Unknown</span></li>
+                                <li><input type="radio" ng-model="property.action" value="is_not_transformed"><span
+                                        style="padding-left:30px;">Is Not Transformed</span></li>
+                                <!--<li><input type="radio" ng-model="property.action" value="unknown"><span-->
+                                <!--style="padding-left:30px;">Unknown</span></li>-->
                             </ul>
                         </div>
                     </div>
