--- a/website/app/application/core/projects/project/samples/edit.html
+++ b/website/app/application/core/projects/project/samples/edit.html
@@ -6,19 +6,29 @@
                 <div class="row"><b>Name: </b>{{current.name}} <br></div>
                 <div class="row"><b>Owner:</b> {{current.owner}} <br></div>
                 <div class="row"><b>Description: </b><br>{{current.description}}</div>
-                <div class="row"><b>Note: </b><br></div>
             </div>
         </div>
         <div class="row">
-            <div class="sample headings">Measurements</div>
+            <div class="sample headings">Properties</div>
             <ul>
-                <li style="padding:10px;" ng-repeat="property in properties">
-                   <b>{{property.name}}</b> :
+                <li style="padding:10px;" ng-repeat="property in current.properties">
+                    <b>{{property.name}}</b> :
                     <div class="row">
                         <div class="col-xs-offset-1">
-                            Best Measure: <span ng-if="property.best_measure.length !== 0" style="padding-left: 5px;">
-                            {{property.best_measure[0].value}}  {{property.best_measure[0].units}}</span>  <br>
-                            Measurements: <a ng-click="measurements(property)">link</a>
+                            Best Measure: <span ng-if="property.best_measure.length !== 0"
+                                                style="padding-left: 5px;">
+                                    {{property.best_measure[0].value}}  {{property.best_measure[0].unit}} </span> <a
+                                style="padding-left: 10px;" class="underline" ng-click="measurements(property)">edit</a>
+                            <br>
+                            Measurements:
+                            <ul>
+                                <li ng-repeat="measure in property.measurements">
+                                    <div>
+                                        <display-measurement current-process=""
+                                                             measure="measure"></display-measurement>
+                                    </div>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </li>
@@ -26,11 +36,18 @@
         </div>
         <div class="row">
             <div class="sample headings">Attachments</div>
-            <div class="row" ng-repeat="attachment in attachments">
+            <div class="row" ng-repeat="file in current.files">
                 <div style="padding-left: 10px;padding-bottom: 20px;;line-height: 5px;">
                     <i class="fa fa-fw fa-paperclip fa-lg" style="color: #919191"></i>
                     <img src="assets/img/splash/file_icon.png" style="height: 40px;padding-bottom: 10px;">
-                    <a class="link" style="padding-left: 15px;">{{attachment}}</a>
+                    <a ng-click="openFile(file)" class="link" style="padding-left: 15px;">{{file.name}}</a>
+
+                    <p style="padding-left: 80px">
+                        <small class="text-muted">{{file.birthtime | toDateString}} , {{file.owner}} , {{file.size}}
+                            kb
+                        </small>
+                    </p>
+
                 </div>
             </div>
         </div>
