--- a/website/app/index.html
+++ b/website/app/index.html
@@ -87,8 +87,8 @@
 
 <!-- ---------------------------- External dependencies ----------------->
 
-<script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1/jquery-ui.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/masonry/3.1.2/masonry.pkgd.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular-animate.min.js"></script>
@@ -333,7 +333,7 @@
 <script src="application/core/projects/project/processes/sidebar-process-details-directive.js"></script>
 <script src="application/core/projects/project/processes/sidebar-setup-directive.js"></script>
 <script src="application/core/projects/project/processes/sidebar-transformed-samples-directive.js"></script>
-<script src="application/core/projects/project/processes/sidebar-files-directive.js"></script>
+<script src="application/core/projects/project/processes/sidebar-transformed-samples-directive.js"></script>
 <script src="application/core/components/properties/partials/display-measurement-directive.js"></script>
 </body>
 </html>
