--- a/website/app/application/core/projects/project/processes/template.html
+++ b/website/app/application/core/projects/project/processes/template.html
@@ -21,9 +21,49 @@
                     </ul>
                 </div>
             </div>
-            <div class="col-xs-8 details-main-content">
-                <b>Description: </b> <br>
-                {{selected.item.description}}
+            <div class="col-xs-8 details-main-content" ng-if="template_details">
+                <h3>{{template_details.name}}</h3>
+                <ul>
+                    <li>Description: {{template_details.description}}</li>
+                    <li>Type: {{template_details._type}}</li>
+                    <li>Transforms Sample:{{template_details.does_transform}}</li>
+                    <li>Files Used: </li>
+                    <li>Files Produced:</li>
+                    <li>Setup: {{template_details.settings[0].name}}
+                        <ul>
+                            <li ng-repeat="setting in template_details.setup.settings[0].properties">
+                                <i>{{setting.property.name}}</i> ::
+                                <div class="row">
+                                    <div class="col-xs-offset-2">
+                                        <div class="row">
+                                            Type: {{setting.property._type}}
+                                        </div>
+                                        <div ng-if="setting.property.choices.length !== 0" class="row">
+                                            Choices:
+                                            <div style="padding-left: 50px;"
+                                                 ng-repeat="choice in setting.property.choices">{{choice.name}}
+                                            </div>
+                                        </div>
+                                        <div ng-if="setting.property.units.length !== 0" class="row">
+                                            Units:
+                                            <div  style="padding-left: 50px;"
+                                                  ng-repeat="unit in setting.property.units">
+                                                {{unit}}
+                                            </div>
+                                        </div>
+                                        <div ng-if="setting.property.units.length === 0" class="row">
+                                            Unit: {{setting.property.unit}}
+                                        </div>
+                                        <div class="row">
+                                            Required: {{setting.property.required}}
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
