Change div displaying UPLOAD button to file-upload-panel tag.

--- a/website/app/application/core/projects/project/files/files.html
+++ b/website/app/application/core/projects/project/files/files.html
@@ -13,9 +13,7 @@
         <div class="col-xs-4">
             <div class="details-sidebar" style=" margin-bottom: -900px;padding-bottom: 900px;">
                 <div class="row">
-                    <div style="text-align: center;margin-top: 20px;">
-                        <button class="btn-details-container btn-files btn btn-default">Upload</button>
-                    </div>
+                    <file-upload-panel></file-upload-panel>
                 </div>
                 <div style="padding: 20px;width: 100%; height: 100%;"
                      angular-grid="gridOptions"
