--- a/website/app/application/core/projects/project/project.html
+++ b/website/app/application/core/projects/project/project.html
@@ -8,10 +8,10 @@
     </div>
     <div ng-if="loaded">
         <div class="row project-task-bar">
-            <project-task-bar
+            <project-nav-bar
                 project="project"
                 projects="projects">
-            </project-task-bar>
+            </project-nav-bar>
         </div>
         <div class="row" style="padding-top:50px;">
             <div ng-class="{'col-sm-12': isExpanded('help'), 'col-sm-4': !isExpanded('help') && showHelp()}" ng-show="showHelp()">
