removed sideboard from project dir and removed tasks

--- a/website/app/application/core/projects/project/home/directives/home-sideboard.html
+++ b/website/app/application/core/projects/project/home/directives/home-sideboard.html
@@ -21,7 +21,7 @@
                 ui-on-drop="onDrop(i, $data, $event)">
                 <div class="dropzone">
                     <h4 class="text-center">
-                        Drop here
+                        Drop here2
                     </h4>
                 </div>
             </li>
