--- a/website/app/application/core/projects/project/files/edit.html
+++ b/website/app/application/core/projects/project/files/edit.html
@@ -3,18 +3,21 @@
         <div class="details-main-content">
             <div class="row">
                 <div class="col-xs-12">
-                    <div class="headings">{{active.name}}
+                    <div class="headings">
+                        {{active.name}}
                         <a ng-href="{{downloadSrc(active)}}" download="{{active.name}}">
-                        <span style="color: #9782be;padding-left:10px;" class="fa-stack fa-lg">
-                              <i class="fa fa-circle-thin fa-stack-2x"></i>
-                              <i class="fa fa-download fa-stack-1x fa-inverse"></i>
-                        </span></a>
+                            <span style="color: #9782be;padding-left:10px;" class="fa-stack fa-lg">
+                                <i class="fa fa-circle-thin fa-stack-2x"></i>
+                                <i class="fa fa-download fa-stack-1x fa-inverse"></i>
+                            </span>
+                        </a>
+                        <a ng-click="rename(active)" class="pull-right">Rename</a>
                     </div>
                 </div>
             </div>
 
             <div class="row">
-                <div class="col-xs-11" ng-switch="fileType">
+                <div class="col-xs-12" ng-switch="fileType">
                     <div ng-switch-when="image">
                         <img class="img-responsive center-block"
                              ng-src="{{fileSrc(active)}}">
@@ -114,6 +117,7 @@
                 <div class="col-xs-3"> Created:</div>
                 <div class="col-xs-6">{{active.birthtime | toDateString}}</div>
                 <br>
+
                 <div class="col-xs-3"> Path:</div>
                 <div class="col-xs-6">{{active.name}}</div>
                 <br>
@@ -142,5 +146,4 @@
             </div>
         </div>
     </div>
-
 </div>
