--- a/website/app/application/core/projects/project/samples/edit.html
+++ b/website/app/application/core/projects/project/samples/edit.html
@@ -10,7 +10,7 @@
         </div>
         <div class="row">
             <div class="sample headings">Transformation</div>
-            <p><small class="text-muted">This Section will provide <b>{{current.name}}</b> initial measuremenets and how these measures have been transformed overrtime.</small></p>
+            <p><small class="text-muted">This section will provide <b>{{current.name}}</b> initial measuremenets and how these measures have been transformed overrtime.</small></p>
             <ul style="padding-left: 40px;" class="list-inline">
                 <li style="padding:10px;" ng-repeat="(key, values) in property_sets">
                     <div ng-repeat="process in values">
