update on sample property measuremens display

--- a/website/app/application/core/projects/project/processes/create.html
+++ b/website/app/application/core/projects/project/processes/create.html
@@ -15,7 +15,7 @@
                 <hr class="divider"/>
 
                 <div class="row" ng-if="template._type === 'as_received'">
-                    <b>New Sample</b>
+                    <b><br>New Sample</b>
                     <div style="padding-left: 20px;" class="col-xs-8">
 
                         <div ng-if="bk.newSample.name">Name: {{bk.newSample.name}}</div>
