Add angular-toastr from bower and remove from our assets folder.

--- a/website/app/index.html
+++ b/website/app/index.html
@@ -25,9 +25,7 @@
     <link href="assets/css/tree-grid.css" rel="stylesheet">
     <link href="assets/css/zenburn.css" rel="stylesheet">
     <link href="assets/css/nzAnimate.css" rel="stylesheet">
-    <!--<link href="assets/css/thumbnail.css" rel="stylesheet">-->
     <link href="assets/css/periodic-table.css" rel="stylesheet">
-    <link href="assets/css/angular-toastr.css" rel="stylesheet">
     <link href="assets/css/vis.css" rel="stylesheet">
     <link href="assets/css/fullcalendar.css" rel="stylesheet">
     <link href="assets/css/nsPopover.css" rel="stylesheet">
@@ -35,6 +33,7 @@
     <link href="assets/css/ng-tags-input.css" rel="stylesheet">
     <link href="bower_components/ag-grid/dist/angularGrid.css" rel="stylesheet">
     <link href="bower_components/ag-grid/dist/theme-fresh.css" rel="stylesheet">
+    <link href="bower_components/angular-toastr/dist/angular-toastr.min.css" rel="stylesheet">
 
     <!-- Application style sheet -->
     <link href="assets/css/style-3.css" rel="stylesheet">
@@ -135,7 +134,7 @@
 <script src="assets/js/underscore.string.min.js"></script>
 <script src="assets/js/angular/socket.js"></script>
 <script src="assets/js/socket.io.js"></script>
-<script src="assets/js/angular/angular-toastr.js"></script>
+<script src='bower_components/angular-toastr/dist/angular-toastr.tpls.min.js'></script>
 <script src="assets/js/angular/angular-masonry.js"></script>
 <script src="bower_components/highcharts-ng/dist/highcharts-ng.min.js"></script>
 <script src="assets/js/vis.js"></script>
