Add create-note.js file for create-note directive.

--- a/website/app/index.html
+++ b/website/app/index.html
@@ -207,6 +207,7 @@
 <script src="application/directives/paged-directive.js"></script>
 <script src="application/directives/mc-flow-button.js"></script>
 <script src="application/directives/on-enter.js"></script>
+<script src="application/directives/create-note.js"></script>
 <script src="application/services/user-service.js"></script>
 <script src="application/services/alert-service.js"></script>
 <script src="application/services/watcher-service.js"></script>
