--- a/website/app/application/core/projects/project/files/edit.html
+++ b/website/app/application/core/projects/project/files/edit.html
@@ -62,6 +62,15 @@
                 <div class="col-xs-6">{{file.active.birthtime | toDateString}}</div>
                 <br>
             </div>
+            <div class="file headings">tags</div>
+            <div class="row" style="padding: 10px;">
+                <div class="row">
+                    <tags-input on-tag-added="file.addTag($tag)" display-property="tag_id"
+                                on-tag-removed="file.removeTag($tag)" ng-model="file.active.tags"
+                                placeholder="Add a Tag" replace-spaces-with-dashes="false">
+                    </tags-input>
+                </div>
+            </div>
             <div class="file headings">note</div>
             <div class="row">
                     <span class="pull-right">
@@ -75,15 +84,6 @@
                 </div>
                 <div class="row" ng-show="file.editNote">
                     <create-note item-type="datafile" item="file.active"></create-note>
-                </div>
-            </div>
-            <div class="file headings">tag</div>
-            <div class="row" style="padding: 10px;">
-                <div class="row">
-                    <tags-input on-tag-added="file.addTag($tag)" display-property="tag_id"
-                                on-tag-removed="file.removeTag($tag)" ng-model="file.active.tags"
-                                placeholder="Add a Tag" replace-spaces-with-dashes="false">
-                    </tags-input>
                 </div>
             </div>
         </div>
