--- a/website/app/application/core/projects/project/processes/sidebar/sidebar-transformed-samples.html
+++ b/website/app/application/core/projects/project/processes/sidebar/sidebar-transformed-samples.html
@@ -2,7 +2,7 @@
     <b>Transformed Sample</b>
     <div class="row" ng-repeat="sample in template.transformed_samples">
         <i class="fa fa-fw fa-paperclip fa-lg" style="color: #919191"></i>
-        <img src="../../../../../../assets/img/splash/sample_icon.png"
+        <img src="assets/img/splash/sample_icon.png"
              style="height: 40px;padding-bottom: 10px;">
         <a ng-click="openDetails(sample)" class="link pointer"
            style="padding-left: 15px;">{{sample.name}}</a>
