--- a/website/app/application/core/projects/project/processes/edit.html
+++ b/website/app/application/core/projects/project/processes/edit.html
@@ -37,6 +37,14 @@
                         <i class="fa fa-fw fa-paperclip fa-lg" style="color: #919191"></i>
                         <img src="assets/img/splash/sample_icon.png" style="height: 40px;padding-bottom: 10px;">
                         <a ng-click="openSample(sample)" class="link" style="padding-left: 15px;">{{sample.name}}</a>
+                        <span ng-if="current.does_transform">
+                            <span ng-if="sample._type==='in'">
+                                  (Before {{current.name}})
+                            </span>
+                             <span ng-if="sample._type==='out'">
+                                 (After {{current.name}})
+                             </span>
+                        </span>
 
                         <p style="padding-left: 80px">
                             <small class="text-muted">{{sample.mtime | toDateString}} , {{sample.owner}}</small>
