Add additional file page controllers.

--- a/website/app/index.html
+++ b/website/app/index.html
@@ -192,7 +192,11 @@
 <script src="application/core/projects/project/processes/measurement-controller.js"></script>
 <script src="application/core/projects/project/help/userguide.js"></script>
 <script src="application/core/projects/project/files/files-controller.js"></script>
+<script src="application/core/projects/project/files/files-all-controller.js"></script>
 <script src="application/core/projects/project/files/file-edit-controller.js"></script>
+<script src="application/core/projects/project/files/files-by-type-controller.js"></script>
+<script src="application/core/projects/project/files/files-images-controller.js"></script>
+<script src="application/core/projects/project/files/files-search-controller.js"></script>
 <script src="application/core/projects/project/access/access-controller.js"></script>
 <script src="application/core/projects/project/reviews/reviews-controller.js"></script>
 <script src="application/core/projects/project/reviews/review-create-controller.js"></script>
