--- a/website/app/application/core/projects/project/files/edit.html
+++ b/website/app/application/core/projects/project/files/edit.html
@@ -1,4 +1,4 @@
-<div class="row" ng-if="file.type === 'file'">
+<div class="row" ng-if="file.type === 'datafile'">
     <div class="col-xs-7" style="padding-right: 1px;">
         <div class="details-main-content">
             <div class="row">
@@ -90,7 +90,7 @@
     </div>
 </div>
 
-<div ng-if="file.type === 'dir'">
+<div ng-if="file.type === 'datadir'">
     <div class="col-xs-7" style="padding-right: 1px;">
         <div class="details-main-content">
             <div class="row">
