--- a/website/app/application/core/projects/project/files/files.html
+++ b/website/app/application/core/projects/project/files/files.html
@@ -14,24 +14,8 @@
 
     </div>
     <div class="row" style="margin-top: 20px;">
-        <div class="col-xs-8">
+        <div class="col-xs-12" style="padding-left: 0px; padding-right: 0px">
             <div ui-view></div>
         </div>
     </div>
-    <!--<div class="row" style="margin-top: 20px;">-->
-        <!--<div class="col-xs-4">-->
-            <!--<div class="details-sidebar" style=" margin-bottom: -900px;padding-bottom: 900px;">-->
-                <!--<div class="row">-->
-                    <!--<file-upload-panel></file-upload-panel>-->
-                <!--</div>-->
-                <!--<div style="padding: 20px;width: 100%; height: 100%;"-->
-                     <!--angular-grid="gridOptions"-->
-                     <!--class="ag-file-browser">-->
-                <!--</div>-->
-            <!--</div>-->
-        <!--</div>-->
-        <!--<div class="col-xs-8" stylex="margin-left: 10px;">-->
-            <!--<div ui-view></div>-->
-        <!--</div>-->
-    <!--</div>-->
 </div>
