Make items plural

--- a/website/app/application/core/projects/project/home/directives/home-files.html
+++ b/website/app/application/core/projects/project/home/directives/home-files.html
@@ -3,7 +3,7 @@
         <div class="panel-heading" style="padding-top: 20px;">
             <img style="height: 35px;padding-bottom: 10px;"
                  src="assets/img/splash/file_icon.png">
-            <span style="color: #9F88C1; font-size: 20px;padding-left: 15px;">FILE</span>
+            <span style="color: #9F88C1; font-size: 20px;padding-left: 15px;">FILES</span>
             <a ng-click="reloadFiles()" class="pull-right bar-control-left">
                 <i class="fa fa-fw fa-refresh" ng-class="{'fa-spin': isReloading}"></i>
             </a>
