--- a/website/app/application/core/projects/project/home/directives/home-processes.html
+++ b/website/app/application/core/projects/project/home/directives/home-processes.html
@@ -3,7 +3,7 @@
         <div class="panel-heading" style="padding-top: 20px;">
             <img style="height: 35px;padding-bottom: 10px;"
                  src="assets/img/splash/process-icon.png">
-            <span style="color: #3A9EE3; font-size: 20px;padding-left: 15px;">PROCESS</span>
+            <span style="color: #3A9EE3; font-size: 20px;padding-left: 15px;">PROCESSES</span>
         </div>
         <div class="panel-body"
              ng-class="{'no-max-height': isExpanded()}">
