--- a/website/app/application/core/projects/project/home/directives/home-reviews.html
+++ b/website/app/application/core/projects/project/home/directives/home-reviews.html
@@ -3,7 +3,7 @@
         <div class="panel-heading" style="padding-top: 20px;">
             <img style="height: 35px;padding-bottom: 10px;"
                  src="assets/img/splash/review_icon.png">
-            <span style="color: #FDAC6B; font-size: 20px;padding-left: 15px;">REVIEW</span>
+            <span style="color: #FDAC6B; font-size: 20px;padding-left: 15px;">REVIEWS</span>
         </div>
         <div class="panel-body home-panel-body"
              ng-class="{'no-max-height': isExpanded()}">
