--- a/website/app/application/core/projects/project/home/directives/home-samples.html
+++ b/website/app/application/core/projects/project/home/directives/home-samples.html
@@ -3,7 +3,7 @@
     <div class="panel-heading" style="padding-top: 20px;">
         <img style="height: 35px;padding-bottom: 10px;"
              src="assets/img/splash/sample_icon.png">
-        <span style="color: #00B69A; font-size: 20px;padding-left: 15px;">SAMPLE</span>
+        <span style="color: #00B69A; font-size: 20px;padding-left: 15px;">SAMPLES</span>
     </div>
         <div class="panel-body"
              ng-class="{'no-max-height': isExpanded()}">
