--- a/website/app/application/core/projects/project/home/directives/home-notes.html
+++ b/website/app/application/core/projects/project/home/directives/home-notes.html
@@ -3,7 +3,7 @@
         <div class="panel-heading" style="padding-top: 20px;">
             <img style="height: 35px;padding-bottom: 10px;"
                  src="assets/img/splash/note_icon.png">
-            <span style="color: #7DAF50; font-size: 20px;padding-left: 15px;">NOTE</span>
+            <span style="color: #7DAF50; font-size: 20px;padding-left: 15px;">NOTES</span>
         </div>
         <div class="panel-body"
              ng-class="{'no-max-height': isExpanded()}">
